subdir('arch/' + h_arch)

deps = [ libarch ]
c_args = [ '-fno-builtin' ]
includes = libc_includes
src = files(
	'generic/libc.c',
	'generic/ddi.c',
	'generic/as.c',
	'generic/bd.c',
	'generic/bd_srv.c',
	'generic/perm.c',
	'generic/cap.c',
	'generic/clipboard.c',
	'generic/config.c',
	'generic/context.c',
	'generic/corecfg.c',
	'generic/devman.c',
	'generic/device/hw_res.c',
	'generic/device/hw_res_parsed.c',
	'generic/device/pio_window.c',
	'generic/device/clock_dev.c',
	'generic/device/led_dev.c',
	'generic/dirent.c',
	'generic/dhcp.c',
	'generic/dnsr.c',
	'generic/dlfcn.c',
	'generic/elf/elf.c',
	'generic/elf/elf_load.c',
	'generic/elf/elf_mod.c',
	'generic/event.c',
	'generic/errno.c',
	'generic/gsort.c',
	'generic/loc.c',
	'generic/mem.c',
	'generic/str.c',
	'generic/str_error.c',
	'generic/strtol.c',
	'generic/l18n/langs.c',
	'generic/fibril.c',
	'generic/fibril_synch.c',
	'generic/pcb.c',
	'generic/smc.c',
	'generic/smp_memory_barrier.c',
	'generic/thread.c',
	'generic/tls.c',
	'generic/task.c',
	'generic/futex.c',
	'generic/imath.c',
	'generic/inet/addr.c',
	'generic/inet/endpoint.c',
	'generic/inet/host.c',
	'generic/inet/hostname.c',
	'generic/inet/hostport.c',
	'generic/inet/tcp.c',
	'generic/inet/udp.c',
	'generic/inet.c',
	'generic/inetcfg.c',
	'generic/inetping.c',
	'generic/io/asprintf.c',
	'generic/io/input.c',
	'generic/io/io.c',
	'generic/io/chardev.c',
	'generic/io/chardev_srv.c',
	'generic/io/chargrid.c',
	'generic/io/output.c',
	'generic/io/printf.c',
	'generic/io/log.c',
	'generic/io/logctl.c',
	'generic/io/kio.c',
	'generic/io/klog.c',
	'generic/io/serial.c',
	'generic/io/snprintf.c',
	'generic/io/vprintf.c',
	'generic/io/vsnprintf.c',
	'generic/io/printf_core.c',
	'generic/io/con_srv.c',
	'generic/io/console.c',
	'generic/io/table.c',
	'generic/io/visualizer.c',
	'generic/io/window.c',
	'generic/iplink.c',
	'generic/iplink_srv.c',
	'generic/irc.c',
	'generic/irq.c',
	'generic/ieee_double.c',
	'generic/power_of_ten.c',
	'generic/double_to_str.c',
	'generic/malloc.c',
	'generic/sysinfo.c',
	'generic/ipc.c',
	'generic/ns.c',
	'generic/async.c',
	'generic/loader.c',
	'generic/getopt.c',
	'generic/adt/checksum.c',
	'generic/adt/circ_buf.c',
	'generic/adt/list.c',
	'generic/adt/hash_table.c',
	'generic/adt/odict.c',
	'generic/adt/prodcons.c',
	'generic/time.c',
	'generic/stdio.c',
	'generic/stdlib.c',
	'generic/udebug.c',
	'generic/vfs/canonify.c',
	'generic/vfs/inbox.c',
	'generic/vfs/mtab.c',
	'generic/vfs/vfs.c',
	'generic/rcu.c',
	'generic/setjmp.c',
	'generic/stack.c',
	'generic/stacktrace.c',
	'generic/arg_parse.c',
	'generic/stats.c',
	'generic/assert.c',
	'generic/pio_trace.c',
	'generic/qsort.c',
	'generic/uuid.c',
	'generic/vbd.c',
	'generic/vol.c',
)

test_src = files(
	'test/adt/circ_buf.c',
	'test/fibril/timer.c',
	'test/main.c',
	'test/io/table.c',
	'test/odict.c',
	'test/qsort.c',
	'test/sprintf.c',
	'test/str.c',
)
